[package]
name = "xxd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logger = { version = "0.1", git = "https://github.com/kirinokirino/logger"  }
log = "*" 
confargenv = { version = "0.1", git = "https://github.com/kirinokirino/confargenv" }